tests/trybuild/tuple-struct-without-attribute.rs
use get::Get;

#[derive(Get)]
pub struct NewType(u64);

pub fn main() {}
